package pt.isel.mpd.expressions;


public interface Expr {
    double eval();
    String getFormula();
}
